[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/PixelOperatorMono8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://menus/BaseButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/CreditsMenu.gd" type="Script" id=4]
[ext_resource path="res://menus/base_button_hover-dark.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 4
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="CreditsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 165.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_right = 288.0
margin_bottom = 149.0
custom_constants/separation = 12

[node name="TitleWrap" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 25.0
custom_constants/separation = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/TitleWrap"]
margin_right = 288.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 1

[node name="SoundsByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/TitleWrap"]
margin_top = 17.0
margin_right = 288.0
margin_bottom = 25.0
text = "Sounds provided by"
align = 1

[node name="CreditsWrap" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 288.0
margin_bottom = 69.0
theme = SubResource( 3 )
custom_constants/separation = 16
alignment = 1

[node name="ApplauseCreditWrap" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap"]
margin_right = 128.0
margin_bottom = 32.0
alignment = 1

[node name="SoundPackLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap"]
margin_right = 128.0
margin_bottom = 5.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "Applause in large hall or church"

[node name="AuthorWrap" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap"]
margin_top = 9.0
margin_right = 128.0
margin_bottom = 14.0
alignment = 1

[node name="ByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap/AuthorWrap"]
margin_left = 38.0
margin_right = 50.0
margin_bottom = 5.0
text = "by "

[node name="AuthorLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap/AuthorWrap"]
margin_left = 54.0
margin_right = 90.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "eXpl0it3r"

[node name="LicenseLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap"]
margin_top = 18.0
margin_right = 128.0
margin_bottom = 23.0
text = "Licensed under"
align = 1

[node name="LicenseLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap"]
margin_left = 2.0
margin_top = 27.0
margin_right = 126.0
margin_bottom = 32.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "CC0 1.0 Universal Public Domain"

[node name="SplashCreditWrap" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap"]
margin_left = 144.0
margin_right = 288.0
margin_bottom = 32.0
alignment = 1

[node name="SoundPackLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap"]
margin_left = 44.0
margin_right = 100.0
margin_bottom = 5.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "Water Splashes"

[node name="AuthorWrap" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap"]
margin_top = 9.0
margin_right = 144.0
margin_bottom = 14.0
alignment = 1

[node name="ByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap/AuthorWrap"]
margin_left = 34.0
margin_right = 46.0
margin_bottom = 5.0
text = "by "

[node name="AuthorLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap/AuthorWrap"]
margin_left = 50.0
margin_right = 110.0
margin_bottom = 5.0
focus_mode = 2
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "Michel Baradari"

[node name="LicenseLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 23.0
text = "Licensed under"
align = 1

[node name="LicenseLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap"]
margin_top = 27.0
margin_right = 144.0
margin_bottom = 32.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "Attribution 3.0 Unported (CC BY 3.0)"

[node name="CreditsWrap2" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 288.0
margin_bottom = 113.0
theme = SubResource( 3 )
alignment = 1

[node name="WaterSplashSlimeCreditWrap" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2"]
margin_left = 78.0
margin_right = 210.0
margin_bottom = 32.0
alignment = 1

[node name="SoundPackLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap"]
margin_right = 132.0
margin_bottom = 5.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "40 CC0 water / splash / slime SFX"

[node name="AuthorWrap" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap"]
margin_top = 9.0
margin_right = 132.0
margin_bottom = 14.0
alignment = 1

[node name="ByLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap/AuthorWrap"]
margin_left = 38.0
margin_right = 50.0
margin_bottom = 5.0
text = "by "

[node name="AuthorLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap/AuthorWrap"]
margin_left = 54.0
margin_right = 94.0
margin_bottom = 5.0
focus_mode = 2
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "rubberduck"

[node name="LicenseLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap"]
margin_top = 18.0
margin_right = 132.0
margin_bottom = 23.0
text = "Licensed under"
align = 1

[node name="LicenseLink" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap"]
margin_left = 4.0
margin_top = 27.0
margin_right = 128.0
margin_bottom = 32.0
focus_mode = 2
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
custom_colors/font_color_hover = Color( 0.188235, 0.376471, 0.509804, 1 )
custom_colors/font_color_pressed = Color( 0.188235, 0.376471, 0.509804, 1 )
text = "CC0 1.0 Universal Public Domain"

[node name="MainMenuButton" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_top = 125.0
margin_right = 194.0
margin_bottom = 149.0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 5 )
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap/SoundPackLink" to="." method="_on_Applause_SoundPackLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap/AuthorWrap/AuthorLink" to="." method="_on_Applause_AuthorLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/ApplauseCreditWrap/LicenseLink" to="." method="_on_Applause_LicenseLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap/SoundPackLink" to="." method="_on_Splash_SoundPackLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap/AuthorWrap/AuthorLink" to="." method="_on_Splash_AuthorLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap/SplashCreditWrap/LicenseLink" to="." method="_on_Splash_LicenseLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap/SoundPackLink" to="." method="_on_WaterSplashSlime_SoundPackLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap/AuthorWrap/AuthorLink" to="." method="_on_WaterSplashSlime_AuthorLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CreditsWrap2/WaterSplashSlimeCreditWrap/LicenseLink" to="." method="_on_WaterSplashSlime_LicenseLink_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
